--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
 
 a {
     text-decoration: none;
-    color: white !important;
+    color: rgb(255, 255, 255) !important;
     font-weight: 500;
 }
 
